# mib2x-crt

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  import_test.py  mib_convert.py
hspy_stripped/: README.md  pyproject.toml
hspy_stripped/src/hspy_stripped/: axes.py  io.py  signal.py
hspy_stripped/src/hspy_stripped/rsciio/: _hierarchical.py
hspy_stripped/src/hspy_stripped/rsciio/hspy/: _api.py
hspy_stripped/src/tests/: test_init.py  test_save.py
