[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hspy_stripped"
version = "1.0.0"
dependencies = [
  "h5py",
  "numpy",
  "packaging",
  "traits",
]
requires-python = ">=3.10"
description = "This is a stripped-down version of HyperSpy/rsciio."
readme = "README.md"
authors = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" },
]
maintainers = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://gitlab.diamond.ac.uk/ePSIC-DLS/mib2x.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
